完善模块使用频率
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@9815 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/patent/patent.edit.html
+++ b/App/View/patent/patent.edit.html
@@ -256,7 +256,7 @@
                         <input type="text" size="40" name="alt1" value="<?=$patent['tminfo']['alt1']?>"/>
                     </div><br/>
                 </dd>
-                <dd><label>商标介绍：</label>
+                <dd><label>专利介绍：</label>
                 <textarea name="intro" id="intro" style="width:80%;height:150px;"><?=$patent['tminfo']['intro']?></textarea></dd>
                 <dd>
                     <label>展示电话：</label>
