--- a/App/View/visitlog/visitlog.viewuser.html
+++ b/App/View/visitlog/visitlog.viewuser.html
@@ -19,7 +19,7 @@
 		<br>
         <div class="wrap-table">
             <table class="table table-hover" style="border: 1px solid #dadada;margin-bottom: 0">
-                <caption>访问者基本信息</caption>
+                <caption>访问者基本信息<a style="float: right;margin-right: 200px" class="btn btn-info" href="<?=$referr?>">返回</a></caption>
                 <thead>
                     <tr class="active">
 						<td>访问者类型</td>
