修改专利描述放在包装里，添加模块走势图功能
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@9896 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/patent/patent.edit.html
+++ b/App/View/patent/patent.edit.html
@@ -257,7 +257,7 @@
                     </div><br/>
                 </dd>
                 <dd><label>专利介绍：</label>
-                <textarea name="intro" id="intro" style="width:80%;height:150px;"><?=$patent['tminfo']['intro']?></textarea></dd>
+                <textarea name="intro" id="intro" style="width:80%;height:150px;"><?=empty($patent['tminfo']['intro'])?$memo:$patent['tminfo']['intro']; ?></textarea></dd>
                 <dd>
                     <label>展示电话：</label>
                     <select name="viewPhone" id="viewPhone">
