--- a/App/View/visitlog/visitlog.search.html
+++ b/App/View/visitlog/visitlog.search.html
@@ -1,42 +1,56 @@
 <? require(ViewDir.'/header.html');?>
 <link rel="stylesheet" href="<?=StaticDir?>1.2/css/main.css">
 <style>
-.img-flip {
-        position:absolute;
-        width:16px;
-        height:16px;
-        -webkit-transform:rotate(180deg);
-        -moz-transform:rotate(180deg);
-        -ms-transform:rotate(180deg);
-        transform:rotate(180deg);
+    td{border: 1px solid #dadada;}
+    .seach_ul li{
+        border: 1px solid #DDDDDD;
+        float: left;
+        padding: 7px 15px;
+        border-bottom: 0px;
+        color: #999999;
+        cursor: pointer;
     }
+   .seach_ul .on{color: #000;}
 </style>
 <div class="place">
     <span>位置：</span>
     <ul class="placeul">
         <li>首页</li>
-        <li>专题设置</li>
-        <li>专题设置列表</li>
+        <li>数据分析</li>
+        <li>热门搜索</li>
     </ul>
 </div>
 <div class="wrap">
+    <div class="mj-screening">
+        <div class="mj-seT f-clearfix">
+            <span>热门搜索统计</span>
+        </div>
+        <form name="visitlogForm" id="visitlogForm" action="/visitlog/frequency/" method="GET">
+        <dl>
+            <dd>
+               <label> 我要统计从：</label><input type="text" name="dateStart" value="<?=$s['dateStart']?>" class="input input-sm" readonly onclick="laydate()" /> 
+                <label>&nbsp;&nbsp;至&nbsp;&nbsp;</label> <input type="text" name="dateEnd" value="<?=$s['dateEnd']?>" class="input input-sm" readonly onclick="laydate()" />
+                
+                <a href="javascript:void(0);" class="mj-sBtn mj-sBtn-search" style="display:inline-block;margin-left:50px;">搜索</a>
+            </dd>
+        </dl>
+        </form>
+    </div>
     <div class="wrap-content">
-		<p class="text-left" style="float:left;margin-top:20px;padding:0 5px 0 5px;background-color:#FFFF99;border:1px solid #dadada;">您可以在此为分类、群组设置对应的描述语言、标签以及权重排序。共有 <b class="red"><?=$total?></b> 条数据</p>
-        <br>
-		<br>
 		<br>
         <div class="wrap-table">
-            <table class="table table-hover" style="border: 1px solid #dadada;margin-bottom: 0">
+            <ul class="seach_ul">
+                <li  class="on" data-type="1">商标名称搜索排行</li>
+                <li data-type="2">商标号搜索排行</li>
+                <li data-type="3">适用服务搜索排行</li>
+            </ul>
+             <table class="table table-hover" style="border: 1px solid #dadada;margin-bottom: 0">
                 <thead>
                     <tr class="active">
-						<th>序号</th>
-                        <th>专题标题</th>
-                        <th>发布时间</th>
-                        <th>创建者</th>
-                        <th>专题类型</th>
-						<th>包含商品</th>
-                        <th>是否启用</th>
-                        <th>操作</th>
+			<th>排名</th>
+                        <th>搜索词</th>
+                        <th>搜索次数</th>
+                        <th>占比</th>
                     </tr>
                 </thead>
                 <tbody class="table-list">
@@ -46,110 +60,22 @@
                     <td><?=$v['title']?></td>
 					<td><?=date('Y-m-d', $v['date'])?></td>
 					<td><?=$v['member']?></td>
-                    <td><?=$v['type']==1?'普通专题':'静态链接专题'?></td>
-					<td><?=$v['classNum']?></td>
-                    <td><?=$v['isUse']==1?'是':'否'?></td>
-                    <td>
-						<a href="javascript:void(0);" onclick="delTopic(<?=$v['id']?>);">删除</a>
-						<a href="/topic/edit/?id=<?=$v['id']?>">编辑</a>	&nbsp;&nbsp;|&nbsp;&nbsp;
-						<span onclick="sortChaneg(<?=$v['id']?>, 1 , 1)"><img class="img" src="<?=StaticDir?>1.2/images/u85.gif"></span>&nbsp;&nbsp;
-						<span class="img-flip" onclick="sortChaneg(<?=$v['id']?>, 1, 2)"><img class="img" src="<?=StaticDir?>1.2/images/u85.gif"></span>
-                    </td>
                 </tr>
                 <? } ?>
                 </tbody>
             </table>
-        </div>   
-		<br>
-		<div class="btn-group">
-            <button class="btn btn-danger add-topic" type="button">+ 创建一个模块</button>
         </div>
-        <div id="page" align="center"><?=$pageBar?></div>
     </div>
 </div>
 <script src="<?=StaticDir?>1.2/js/bootstrap.min.js"></script>
 <script type="text/javascript">
-    $(function (){
-
-        $(".add-topic").click(function(){
-            layer.open({
-                type: 2,
-                scrollbar: false,
-                title: '创建专题',
-                area: ['400px', '200px'],
-
-                content: '/topic/add/'
-            });
+    $(function(){
+        $(".mj-sBtn").click(function(){
+			var index = layer.load(1, {
+				shade: [0.5,'#fff'] //0.1透明度的白色背景
+			});
+            $("#visitlogForm").submit();
         });
     });
-//删除链接
-function delTopic(id)
-{	
-	if ( id <= 0 || id == '' ) return false;
-	layer.confirm('确认要删除此模块吗？<br>', {
-		btn: ['删了','算了'] //按钮
-	}, function(){
-		$.ajax({
-			type : 'post',
-			url  : '/topic/delTopic/',
-			data : {'id':id},
-			dataType : 'json',
-			success : function (data){
-				if (data.code==1){
-					layer.msg('操作成功', {
-						time: 1000 //2秒关闭（如果不配置，默认是3秒）
-					}, function(){
-						window.location.reload();
-					});
-				}else{
-					var msg = data.msg == undefined ? '操作失败，请确认数据是否正确。' : data.msg;
-					layer.msg(msg, {
-						time: 2000 //2秒关闭（如果不配置，默认是3秒）
-					});
-				}
-			},
-			error : function (data){
-				layer.msg('操作失败，请检查您输入的内容是否正确后重新尝试', {
-					time: 2000 //2秒关闭（如果不配置，默认是3秒）
-				});
-			}
-		});
-	});
-}
-
-
-function sortChaneg(id, type, updown)
-{
-    if ( id == '' || updown == '' || type == '') return false;
-    $.ajax({
-        type : 'post',
-        url  : '/topic/sortChaneg/',
-        data : {id:id,updown:updown,type:type},
-        dataType : 'json',
-        success : function (data){
-            if (data.code==1){
-                layer.msg('操作成功', {
-                    time: 1000 //2秒关闭（如果不配置，默认是3秒）
-                }, function(){
-                    window.location.reload();
-                });
-            }else{
-                layer.msg(data.msg, {
-                    time: 1000 //2秒关闭（如果不配置，默认是3秒）
-                });
-            }
-        },
-        error : function (data){
-            layer.msg('操作失败，请稍后重试。', {
-                time: 2000 //2秒关闭（如果不配置，默认是3秒）
-            });
-        }
-    });
-}
-
-function edit(id){
-	window.location.href="/topic/edit/?id="+id;
-}
-</script>
-
+    </script>
 <? require(ViewDir.'/footer.html'); ?>
