修改后台数据统计文字性BUG
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@9946 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/visitlog/visitlog.trendchart.html
+++ b/App/View/visitlog/visitlog.trendchart.html
@@ -124,7 +124,7 @@ $(function () {
         //提交按钮
         $(".mj-sBtn").click(function(){
             if($("#pages").val()==0){
-                layer.msg('您还未选择需要统计的页面', {
+                layer.msg('您还未选择需要统计的页面或模块', {
 					time: 2000 //2秒关闭（如果不配置，默认是3秒）
 				});
                 return false;
