完成数据跟踪90%
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@9997 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/visitlog/visitlog.userlist.html
+++ b/App/View/visitlog/visitlog.userlist.html
@@ -38,7 +38,7 @@
 					<td><?=($v['issem']?'推广':'直接访问')?></td>
 					<td><?=($v['device'])?'手机':'电脑'?></td>
 					<td><?=($v['visits']>5)?'老用户':'新用户'?>(<?=$v['visits']?>)</td>
-                    <td>无</td>
+                    <td><?=$v['huaxiang']?></td>
 					<td><?=date('Y.m.d H:i', $v['lastdateline'])?></td>
 					<td><?=$v['stay']?></td>
                     <td>
