--- a/App/View/visitlog/visitlog.userlist.html
+++ b/App/View/visitlog/visitlog.userlist.html
@@ -34,7 +34,7 @@
                 <tbody class="table-list">
                 <? foreach ($list as $k => $v) {  ?>
                 <tr>
-					<td>访问者</td>
+					<td><?=($v['tel']?'用户':'访问者')?></td>
 					<td><?=($v['issem']?'推广':'直接访问')?></td>
 					<td><?=($v['device'])?'手机':'电脑'?></td>
 					<td><?=($v['visits']>5)?'老用户':'新用户'?>(<?=$v['visits']?>)</td>
