完善数据统计时间搜索BUG
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@10004 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/visitlog/visitlog.frequency.html
+++ b/App/View/visitlog/visitlog.frequency.html
@@ -39,7 +39,9 @@
                     </thead>
                     <tbody class="table-list">
                     <tr>
-                    <? foreach ($v['view'] as $key => $val) { ?>
+                    <? foreach ($v['view'] as $key => $val) { 
+                        if(($key==30 || $key==31) && $k!=11) continue;
+                    ?>
                         <td width="50%">模块：<?=$val['title']?>&nbsp;&nbsp;<img src="/Static/images/u35.png">&nbsp;&nbsp;点击次数：<?=$val['count']?>&nbsp;&nbsp;<img src="/Static/images/u43.png">&nbsp;&nbsp;占比：<?=$val['zhanbi']?>%</td>
                         <? if($key%2==0){
                             echo "</tr><tr>";
