下拉选择BUG修改
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@10006 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/visitlog/visitlog.trendchart.html
+++ b/App/View/visitlog/visitlog.trendchart.html
@@ -143,13 +143,15 @@ $(function () {
                         $("#dates").val($(this).data("date"));
             $("#visitlogForm").submit();
         });
-        
         //选择页面
         $("#pages").change(function(){
             var id = $(this).val();
             if(id===0) return;
             var str="<option value='0'>--全部模块--</option>";
             $.each(page_url[id]['view'],function(key,val){
+                if((key==30 || key==31) && id!=11){
+                    return;
+                }
                 str+="<option value='"+key+"'>"+val.title+"</option>";
             });
              
