修改走势图ＢＵＧ
git-svn-id: http://192.168.0.5/svn/Member/trade/webadmin@10011 8c2d0303-d7d2-0546-a2d7-8b6cbec2f4b4

--- a/App/View/visitlog/visitlog.trendchart.html
+++ b/App/View/visitlog/visitlog.trendchart.html
@@ -149,7 +149,7 @@ $(function () {
             if(id===0) return;
             var str="<option value='0'>--全部模块--</option>";
             $.each(page_url[id]['view'],function(key,val){
-                if((key==30 || key==31) && id!=11){
+                if((key==30 || key==31) && id!=11 && id!=4){
                     return;
                 }
                 str+="<option value='"+key+"'>"+val.title+"</option>";
