--- a/App/View/visitlog/visitlog.search.html
+++ b/App/View/visitlog/visitlog.search.html
@@ -56,7 +56,7 @@
                 <thead>
                     <tr class="active">
 			<th>排名</th>
-                        <th>筛选</th>
+                        <th>搜索词/筛选</th>
                         <th>搜索次数</th>
                         <th>占比</th>
                     </tr>
